Bug 395537 - Nothing happens if you resume a download that you deleted. r=sdwilsh, blocking-ff3=mconnor